--- a/joannafarris_ml.ipynb
+++ b/joannafarris_ml.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we’ll call our new `c()` function to convert our Fahrenhait values to their corresponding Celsius values, and we'll generate a list of tuples containing these value pairs."
+    "Next, we’ll call our new `c()` function to convert our Fahrenhait values to their corresponding Celsius values, and we'll generate a list of tuples containing these value pairs."
    ]
   },
   {
