As good as it gets

--- a/joannafarris_ml.ipynb
+++ b/joannafarris_ml.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "---    \n",
     "\n",
-    "#### For this final project, we explore the world of machine learning by focusing on supervised learning, specifically simple linear regression. We'll train a model using all available data, then use the resulting 'best-fit' line to make predictions.\n",
+    "#### For this final project, we explore the world of machine learning by focusing on supervised learning, specifically simple linear regression. We'll train a model using all available data, then use the resulting 'best-fit' line to make predictions. \n",
     "\n",
     "GitHub repository: https://github.com/Pojetta/datafun-07-applied  \n",
     "\n",
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we’ll call our new `c()` function to convert our Fahrenhait values to their corresponding Celsius values, and we'll generate a list of tuples containing these value pairs."
+    "Next, we’ll call our new `c()` function to convert our Fahrenheit values to their corresponding Celsius values, and we'll generate a list of tuples containing these value pairs."
    ]
   },
   {
@@ -566,7 +566,7 @@
     }
    ],
    "source": [
-    "# Calcuate basic statistics from Temperature column with describe()\n",
+    "# Calculate basic statistics from Temperature column with describe()\n",
     "pd.set_option('display.precision', 2)\n",
     "nyc_df.Temperature.describe()"
    ]
@@ -657,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can use this model to predict the average January high temperature for any given year by passing in the year as the `x` variable, and solving for y.\n"
+    "Now you can use this model to predict the average January high temperature for any given year by passing in the year as the `x` variable, and solving for y. \n"
    ]
   },
   {
@@ -759,7 +759,7 @@
     }
    ],
    "source": [
-    "# Scale the y axis for a better data visualizaion.\n",
+    "# Scale the y axis for a better data visualization.\n",
     "\n",
     "sns.set_style('whitegrid')\n",
     "axes = sns.regplot(x=nyc_df.Date, y=nyc_df.Temperature)\n",
@@ -784,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Section 1 - Build and Train the Model:"
+    "### Section 1 - Build and Train the Model"
    ]
   },
   {
@@ -1439,11 +1439,11 @@
     "Throughout this project, I explored both a traditional Simple Linear Regression (SLR) model and a Machine Learning (ML) linear regression model to predict temperature trends over a 125-year period. These are my key takeaways:\n",
     "\n",
     "\n",
-    "* One thing that stood out to me is that the SLR model, by design, uses the entire dataset for building the model (so *more* data), whereas the ML model only trains on a portion of the data.  \n",
+    "* One thing that stood out to me is how the SLR model, by design, technically uses *more* data for building its model than the Machine Learning does.  \n",
     "\n",
-    "* Knowing absolutely nothing coming into this, I was surprised to learn that despite the differences in how they handle the data, the produced models are of the exact same form: the familiar slope-intercept linear equation, y = mx + b.  \n",
+    "* Knowing absolutely nothing coming into this, I was surprised to learn that despite the differences in how they handle the data, the produced models are of the exact same form--namely, a slope-intercept linear equation, y = mx + b.  \n",
     "\n",
-    "* The key difference between the two models is in the way that we feed them data. Specifically, instead of recieving the entire dataset (like with the SLR model), the Machine Learning model is only given a majority of it, as it reserves a portion for testing. And its value must lie in the feedback from those tests--as it surely allows for an ever greater fine tuning of the model’s ability to predict. \n",
+    "* The key difference between the two models is in the way we feed them data. Specifically, instead of receiving the entire dataset (like the SLR model does), the Machine Learning model is only given a majority of it, as it reserves a portion for testing. And its value must lie in the feedback from those tests--as it surely allows for an ever greater fine tuning of the model’s ability to predict. \n",
     "\n",
     " \n",
     "In comparing SLR and ML models, I found it fascinating how each model utilizes data differently. While both ultimately follow the same equation structure, the iterative training and testing process in ML opens the door for refining predictions and potentially improving model accuracy. "
